# vocpub-genericode

./: README.md  pyproject.toml
examples/: CountryIdentificationCode-2.3.py  README.md
src/vocpub_genericode/: model.py  utils.py
src/vocpub_genericode/cli/: __init__.py  app.py
